@@ -18,6 +18,7 @@ documents those changes that are of interest to users and administrators.
  -- Fix race condition when using jobacct_gather/cgroup where the memory of the
     step wasn't always gathered correctly.
  -- Better debug when slurmdbd queue is filling up in the slurmctld.
+ -- Fixed truncation on scontrol show config output.
 
 * Changes in Slurm 17.02.6
 ==========================
